<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_apms_ros2behavior</name>
  <version>1.2.0</version>
  <description>Behavior related extensions for the ROS 2 CLI</description>
  <maintainer email="mue.robin@icloud.com">Robin Müller</maintainer>
  <license>Apache-2.0</license>
  <url>https://autoapms.github.io/auto-apms-guide/</url>

  <depend>ros2cli</depend>
  <depend>auto_apms_behavior_tree</depend>
  <depend>auto_apms_interfaces</depend>
  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>ros2param</depend>
  <depend>ros2run</depend>
  <depend>std_srvs</depend>
  <depend>rcl_interfaces</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
