<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_apms_simulation</name>
  <version>0.0.0</version>
  <description>Basic simulation environment and tools for AutoAPMS</description>
  <maintainer email="mue.robin@icloud.com">Robin Müller</maintainer>
  <license>Apache License 2.0</license>
  <url>https://robin-mueller.github.io/auto-apms-guide/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>auto_apms_behavior_tree_core</depend>
  <depend>rosidl_cmake</depend>
  <depend>rclpy</depend>

  <!-- Python packages -->
  <depend>python3-pip</depend>
  <depend>python3-transforms3d</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-numpy</depend>
  <depend>python3-collada</depend>
  <depend>python3-pyside6</depend>
  <depend>python3-yaml</depend>
  <depend>python3-shapely</depend>
  <depend>python3-scipy</depend>
  <depend>python3-trimesh-pip</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
