<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_apms_util</name>
  <version>0.0.0</version>
  <description>AutoAPMS utilities</description>
  <maintainer email="mue.robin@icloud.com">Robin Müller</maintainer>
  <license>Apache License 2.0</license>
  <url>https://robin-mueller.github.io/auto-apms-guide/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rcpputils</depend>
  <depend>ament_index_cpp</depend>
  <depend>ament_index_python</depend>
  <depend>generate_parameter_library</depend>
  <depend>pluginlib</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>boost</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>auto_apms_interfaces</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
