<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>contingency_manager</name>
    <version>0.0.0</version>
    <description>A contingency manager for UAS applications</description>
    <maintainer email="mueller@fsr.tu-darmstadt.de">robin</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>eigen3_cmake_module</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>rclcpp_components</depend>
    <depend>uas_behavior</depend>
    <depend>contingency_manager_interfaces</depend>
    <depend>px4_msgs</depend>
    <depend>px4_ros2_cpp</depend>
    <depend>eigen</depend>

    <exec_depend>ros2launch</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
